Add vim region, use it with +/_. Format is ctrl d.

--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "bundle/vim-over"]
 	path = bundle/vim-over
 	url = https://github.com/osyo-manga/vim-over.git
+[submodule "bundle/vim-expand-region"]
+	path = bundle/vim-expand-region
+	url = https://github.com/terryma/vim-expand-region.git
