add: Python support through jedi-vim and flake8-vim, .vimrc refactoring

--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,12 @@
 [submodule "bundle/vim-expand-region"]
 	path = bundle/vim-expand-region
 	url = https://github.com/terryma/vim-expand-region.git
+[submodule "bundle/flake8-vim"]
+	path = bundle/flake8-vim
+	url = git@github.com:andviro/flake8-vim.git
+[submodule "bundle/vim-markdown"]
+	path = bundle/vim-markdown
+	url = git@github.com:plasticboy/vim-markdown.git
+[submodule "bundle/jedi-vim"]
+	path = bundle/jedi-vim
+	url = git@github.com:davidhalter/jedi-vim.git
