--- a/.gitmodules
+++ b/.gitmodules
@@ -30,10 +30,6 @@
 	path = bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
     ignore = dirty
-[submodule "bundle/vim-indent-guides"]
-	path = bundle/vim-indent-guides
-	url = https://github.com/nathanaelkane/vim-indent-guides.git
-    ignore = dirty
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
@@ -139,3 +135,6 @@
 [submodule "bundle/vim-textobj-indent"]
 	path = bundle/vim-textobj-indent
 	url = https://github.com/kana/vim-textobj-indent
+[submodule "bundle/switch.vim"]
+	path = bundle/switch.vim
+	url = https://github.com/AndrewRadev/switch.vim
