--- a/extra/.vimrc.preconf.sample
+++ b/extra/.vimrc.preconf.sample
@@ -7,7 +7,7 @@
 
 " Diable plugins
 
-" remove the plugin man on neovim
+" Exemple : remove the plugin man on neovim
 if has("nvim")
     call dein#disable('idbrii/vim-man')
 endif
@@ -33,7 +33,7 @@ endif
 "let g:disable_highlightWordUnderCursor=1
 
 " the right margin
-let g:disable_margin=1
+"let g:disable_margin=1
 
 """"""""""""""""""""""""""""""""""""
 " Filetypes
