--- a/extra/.vimrc.preconf.sample
+++ b/extra/.vimrc.preconf.sample
@@ -2,7 +2,7 @@
 " You might copy it but avoid symbolic link.
 
 """""""""""""""""""""""""""""""""""""
-" Pathogen
+" Plugins
 """"""""""""""""""""""""""""""""""""""
 
 " Diable plugins
