--- a/extra/.vimrc.preconf.sample
+++ b/extra/.vimrc.preconf.sample
@@ -6,12 +6,15 @@
 """"""""""""""""""""""""""""""""""""""
 
 " Diable plugins
+" Caution:
+" Then name of the plugin is WITHOUT the repo.
+" you need to restart vim, call :Update and restart Vim again
+" due to cache mecanism of dein
+"call dein#disable('numbers.vim')
 
 " Exemple : remove the plugin man on neovim
-" When adding a disabled plugin
-" you need to call :Update and restart Vim
 if has("nvim")
-    call dein#disable('idbrii/vim-man')
+    call dein#disable('vim-man')
 endif
 
 """""""""""""""""""""""""""""""""""""
