--- a/extra/.vimrc.preconf.sample
+++ b/extra/.vimrc.preconf.sample
@@ -44,6 +44,16 @@ endif
 "let g:disable_margin=1
 
 """"""""""""""""""""""""""""""""""""
+" Feature
+""""""""""""""""""""""""""""""""""""
+
+" all .swp in a folder
+" you need to create this folder
+" The trailing // allows to use the complete path of the
+" saved file to ensure uniqueness
+" execute 'set directory='.g:Vimmic_BASE.'/.swapfiles//'
+
+""""""""""""""""""""""""""""""""""""
 " Filetypes
 """"""""""""""""""""""""""""""""""""
 
