--- a/extra/vimrc.preconf.sample
+++ b/extra/vimrc.preconf.sample
@@ -22,6 +22,14 @@
 " the right margin
 "let g:disable_margin=1
 
+" Statusbar colors
+let g:StatusNormalFG="0"
+let g:StatusInsertFG="Blue"
+let g:StatusReplaceFG="Red"
+let g:StatusBG="White"
+let g:StatusNCBG="233"
+let g:StatusNCFG="White"
+
 """"""""""""""""""""""""""""""""""""
 " Filetypes
 """"""""""""""""""""""""""""""""""""
