fix(Plugins): Set depends on custom objects

--- a/default.toml
+++ b/default.toml
@@ -63,16 +63,20 @@ repo = 'Raimondi/delimitMate'
 repo = 'kana/vim-textobj-user'
 
 [[plugins]]
-repo = 'sgur/vim-textobj-parameter'
+repo    = 'sgur/vim-textobj-parameter'
+depends = 'vim-textobj-user'
 
 [[plugins]]
-repo = 'kana/vim-textobj-indent'
+repo    = 'kana/vim-textobj-indent'
+depends = 'vim-textobj-user'
 
 [[plugins]]
-repo = 'kana/vim-textobj-function'
+repo    = 'kana/vim-textobj-function'
+depends = 'vim-textobj-user'
 
 [[plugins]]
-repo = 'kana/vim-textobj-entire'
+repo    = 'kana/vim-textobj-entire'
+depends = 'vim-textobj-user'
 
 [[plugins]]
 repo = 'tpope/vim-commentary'
