fix(plugin): remove searchComplete to fix d/, y/ ...
This plugin has a bug preventing the operation as d/<pattern> to works.
So we remove this plugin and the bug is fixed.

--- a/default.toml
+++ b/default.toml
@@ -102,8 +102,9 @@ repo = 'kien/rainbow_parentheses.vim'
 [[plugins]]
 repo = 'osyo-manga/vim-over'
 
-[[plugins]]
-repo = 'vim-scripts/SearchComplete'
+# bug with d/, y/ ...
+# [[plugins]]
+# repo = 'vim-scripts/SearchComplete'
 
 # Text process
 [[plugins]]
