--- a/default_ft.toml
+++ b/default_ft.toml
@@ -6,6 +6,7 @@
 [[plugins]]
 repo = 'justmao945/vim-clang'
 on_ft = ['c','cpp']
+if = "has('python')"
 
 [[plugins]]
 repo = 'octol/vim-cpp-enhanced-highlight'
