style(Colors): Support for term gui colors
Also fix the main status colors in normal mode

And add colors for warning . errors wiht ALE

--- a/extra/vimrc.postconf.sample
+++ b/extra/vimrc.postconf.sample
@@ -19,12 +19,12 @@ colorscheme gruvbox
 
 " Colorscheme for true colors
 " set background=dark
-" set termguicolors
+"" set termguicolors  " if not already in preconf
 " colorscheme quantum
+
 " if !has("nvim")
 "    set term=xterm-256color
 " endif
-" let g:airline_theme='quantum'
 
 """"""""""""""""""""""""""""""""""""
 " Feature
