feat(place.vim): add ga/bg modifier to make changes somewhere else than the cursor
expl:

to|to tutu

pres ga$.

to|to tutu.

--- a/default.toml
+++ b/default.toml
@@ -114,6 +114,9 @@ repo = 'godlygeek/tabular'
 repo = 'AndrewRadev/switch.vim'
 
 [[plugins]]
+repo = 'joereynolds/place.vim'
+
+[[plugins]]
 repo = 'scrooloose/nerdcommenter'
 
 # Completion / Snippets / Utility
