feat(Clever completion): use mucomplete to chain existing completion
Allows to complete not only with omni, but also filenames and existing
words using ctrl x x

--- a/default.toml
+++ b/default.toml
@@ -119,6 +119,9 @@ repo = 'joereynolds/place.vim'
 # Completion / Snippets / Utility
 
 [[plugins]]
+repo = 'lifepillar/vim-mucomplete'
+
+[[plugins]]
 repo = 'CharlesGueunet/VimFilify'
 
 [[plugins]]
