feat(Operator): ga alignement operator
use gi and gm for place.vim to avoid conflict

--- a/default.toml
+++ b/default.toml
@@ -107,8 +107,12 @@ repo = 'osyo-manga/vim-over'
 # repo = 'vim-scripts/SearchComplete'
 
 # Text process
+
 [[plugins]]
 repo = 'godlygeek/tabular'
+
+[[plugins]]
+repo = 'junegunn/vim-easy-align'
 
 [[plugins]]
 repo = 'AndrewRadev/switch.vim'
