feat(Termdebug): Basic colors
and some example for those who would like to give it a try

--- a/extra/vimrc.postconf.sample
+++ b/extra/vimrc.postconf.sample
@@ -51,6 +51,13 @@ augroup cpp_replace
     autocmd FileType c,cpp inoremap  <, <<
 augroup END
 
+" cgdb like shortcuts for Termdebug
+nnoremap <F5> :Run<CR>
+nnoremap <F6> :Continue<CR>
+nnoremap <F7> :Finish<CR>
+nnoremap <F8> :Over<CR>
+nnoremap <F10> :Step<CR>
+
 " Get rid of command window
 " map q: :q
 
