--- a/default.toml
+++ b/default.toml
@@ -100,7 +100,7 @@ repo = 'kien/rainbow_parentheses.vim'
 # Search & Replace
 
 [[plugins]]
-repo = 'osyo-manga/vim-over'
+repo = 'markonm/traces.vim'
 
 # bug with d/, y/ ...
 # [[plugins]]
