--- a/extra/vimrc.preconf.sample
+++ b/extra/vimrc.preconf.sample
@@ -56,10 +56,12 @@
 " you need to create this folder
  set directory=$HOME/.cache/vimtmp//
 
+packadd termdebug
+
 " Vertical termdebug (help termdebug_wide)
 let g:termdebug_wide=163
+sign define debugBreakpoint text=<> texthl=debugBreakpoint
 
-packadd termdebug
 packadd matchit
 
 """"""""""""""""""""""""""""""""""""
