--- a/extra/vimrc.preconf.sample
+++ b/extra/vimrc.preconf.sample
@@ -56,13 +56,9 @@
 " you need to create this folder
  set directory=$HOME/.cache/vimtmp//
 
-packadd termdebug
-
-" Vertical termdebug (help termdebug_wide)
-let g:termdebug_wide=163
-autocmd BufEnter * sign define debugBreakpoint text=<> texthl=debugBreakpoint
-
 packadd matchit
+" Configures in the config/plugins folder
+packadd termdebug
 
 """"""""""""""""""""""""""""""""""""
 " Filetypes
