--- a/default_ft.toml
+++ b/default_ft.toml
@@ -4,51 +4,59 @@
 # C / CPP
 
 [[plugins]]
-repo = 'justmao945/vim-clang'
+repo  = 'justmao945/vim-clang'
 on_ft = ['c','cpp']
-if = "has('python')"
+if    = "has('python')"
 
 [[plugins]]
-repo = 'octol/vim-cpp-enhanced-highlight'
+repo  = 'octol/vim-cpp-enhanced-highlight'
 on_ft = ['c','cpp']
 
+[[plugins]]
+repo = 'ilyachur/cmake4vim'
+depends = 'vim-dispatch'
+on_ft = ['c', 'cpp', 'tex']
 
 # Build system
 
 [[plugins]]
-repo = 'richq/vim-cmake-completion'
+repo  = 'richq/vim-cmake-completion'
+on_ft = 'cmake'
+
+[[plugins]]
+repo  = 'nickhutchinson/vim-cmake-syntax'
 on_ft = 'cmake'
 
 # Python
 
 [[plugins]]
-repo = 'davidhalter/jedi-vim'
+repo  = 'davidhalter/jedi-vim'
 on_ft = 'python'
 
 [[plugins]]
-repo = 'andviro/flake8-vim'
+repo  = 'andviro/flake8-vim'
 on_ft = 'python'
 
 # Golang
 
 [[plugins]]
-repo = 'fatih/vim-go'
+repo  = 'fatih/vim-go'
 on_ft = 'go'
 
 # XML / HTML
 
 [[plugins]]
-repo = 'sukima/xmledit'
+repo  = 'sukima/xmledit'
 on_ft = ['xml','html']
 
 # Latex
 
 [[plugins]]
-repo = 'lervag/vimtex'
+repo  = 'lervag/vimtex'
 on_ft = 'tex'
 
 # Markdown
 
 [[plugins]]
-repo = 'plasticboy/vim-markdown'
+repo  = 'plasticboy/vim-markdown'
 on_ft = 'markdown'
